--- a/index.html
+++ b/index.html
@@ -1,45 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
 
-<script src="path/to/p5.sound.js"></script>
+  <link rel="stylesheet" href="style.css">
 
-
+  <style>
+    body {
+      background-color: #262626;
+      color: #edbdaf;
+      font-family: "DM Mono", sans-serif;
+      font-size: 20px;
+    }
+  </style>
 </head>
 <body>
+  <button onclick="revealtext()">Guide</button>
 
-<button onclick="revealtext()">Guide</button>
-
-  
   <div id="guide">
-This study consists of three parts: <b>1)</b> a sound file, <b>2)</b> a table, <b>3)</b> an essay. The sound file is made from selected writings on the Great Salt Lake. The table contains these selections, along with my analysis. The file is a test of concept against these original texts. The essay explains why. </div>
+    This study consists of three parts: <b>1)</b> a sound file, <b>2)</b> a table, <b>3)</b> an essay...
+  </div>
 
-<script>
-function revealtext() {
-  var x = document.getElementById("guide");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
-</script>
-  
-</style>
-   <link rel="stylesheet" href="/style.css"/>
-  <style>
-body {
-  background-color: #262626;
-  color:#edbdaf
-  
-</style>
-  <style>
-body {
-  font-family: "DM Mono", sans-serif;
-  font-size:20px  
-}
-</style>
-</head>
+  <script>
+    function revealtext() {
+      var x = document.getElementById("guide");
+      if (x.style.display === "none") {
+        x.style.display = "block";
+      } else {
+        x.style.display = "none";
+      }
+    }
+  </script>
+</body>
+</html>
+
 <body>
 
 <div id="player">
