--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <button onclick="revealtext()">Guide</button>
 
   <div id="guide">
-    This study consists of three parts: <b>1)</b> a sound file, <b>2)</b> a table, <b>3)</b> an essay...
+    This study consists of three parts: <b>1)</b> a sound file, <b>2)</b> a table, <b>3)</b> an essay. The sound file is made from selected writings on the Great Salt Lake. The table contains these selections, along with my analysis. The file is a test of concept against these original texts. The essay explains why.
   </div>
 
   <script>
