--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
 
 <div id="player">
-<audio controls src="https://cdn.glitch.global/25e86712-3891-4f7f-9aab-1ad2f2272b66/realake_study.mp3?v=1683777985520"></audio></div>
+<audio controls src="realake_study_remaster.mp3"></audio></div>
   
 <div class="grid-container">
   <div class="grid-item">September 1994, I camp on a mountain slope near the entrance of Hogup Cave. Throughout the night, the landscape is severed distinctly into a zone of darkness and a zone of lightness. The black mountain shape silhouettes starkly against sky brightly illuminated by a full moon. In a peculiar segregation, the expansive salt flats below belong not to the dark earth zone but are claimed by luminous reflection into the radiant realm of light. Gradually the two-toned night departs, chased away by the intensifying of the soft, subtle light of dawn. ES (1)
